@@ -7,6 +7,9 @@ An overview of the relevant changes in new, and older, releases.
 Version 1.3.7 (????-??-??)
 --------------------------
 
+- Added wrappers for embedded DiscRecording frameworks
+  ([ 1224188 ] Fix for DiscRecording framework)
+
 - Probably working Xcode 2.1 support (for converted Xcode 2.0 projects)
 
 - Hide List, Object, and Protocol classes from objc.loadBundle
